add new welcome-page

--- a/main.html
+++ b/main.html
@@ -10,12 +10,15 @@
 </head>
 <body>
 <div class="welcome-image">
+    <div class="welcome-header">
+        Видеореклама <br>на youtube
+    </div>
+    <span>узнай сколько стоит?</span>
+</div>
+<div class="arrow-down arrow-animate">
+    <img src="assets/png/владу.png">
 </div>
 <div class="content-container">
-    <div class="welcome-header">
-        <span>сколько стоит?</span>
-
-    </div>
     <div class="circles-container">
         <div class="first-circle circle" id="first-circle">
             <label for="first-circle" class="hover-elements">
@@ -29,7 +32,7 @@
                 </div>
                 <div class="item">
                     <div class="icon icon-element-3"></div>
-                    <span>N охват</span>
+                    <span>N вовлечений</span>
                 </div>
             </label>
             <span class="circle-span"> 10$ </span>
@@ -48,7 +51,7 @@
                 </div>
                 <div class="item">
                     <div class="icon icon-element-3"></div>
-                    <span>N охват</span>
+                    <span>N вовлечений</span>
                 </div>
             </label>
             <span class="circle-span"> 30$ </span>
@@ -67,18 +70,18 @@
                 </div>
                 <div class="item">
                     <div class="icon icon-element-3"></div>
-                    <span>N охват</span>
+                    <span>N вовлечений</span>
                 </div>
             </label>
             <span class="circle-span"> 60$ </span>
         </div>
     </div>
     <div class="calculator-text-container">
-        <h3>
-            Расчет
-        </h3>
         <div class="text">
             Рассчитывайте свой рекламный бюджет с точностью до копейки.
+        </div>
+        <br>
+        <div class="text">
             Оплата просмотра происходит только в том случае,
             если пользователь просматривает ваш видеоролик до конца.
         </div>
@@ -282,35 +285,66 @@
             <div class="image-text">
                 <h3>Принципы работы</h3>
                 <div class="slide-text">
-                    Показ роликов осуществляется как на видеохостинге YouTube, так и в
-                    других партнёрских КМС ресурсах: в видео,
-                    играх и приложениях для IOS и Android. Пользователи могут
-                    пропустить ваше видео TrueView In-Stream только через 5 секунд
-                    после старта видеоролика.
+                    Показ роликов осуществляется как на YouTube, так и в других
+                    КМС ресурсах: в видео, играх и др. Пользователи могут пропустить
+                    видео TrueView In-Stream через 5 секунд после его начала.
+                </div>
+                <h3>Где показываются объявления</h3>
+                <div class="slide-text">
+                    Объявления TrueView In-Stream отображаются в других видеороликах
+                    на страницах просмотра YouTube, а также на партнерских видеосайтах
+                    и в приложениях, входящих в КМС.
+                </div>
+                <h3>Оплата</h3>
+                <div class="slide-text">
+                    Оплачивать просмотр придётся только в случае если:<br>
+                    1. Пользователь досмотрел не менее 30 сек. объявления
+                    (либо весь видеоролик длительностью менее 30 секунд).<br>
+                    2. Пользователь перешёл по сопутствующему баннеру или оверлею содержащим C2A.
                 </div>
             </div>
         </div>
         <div class="slide-item">
             <img src="assets/png/слайд2.png">
             <div class="image-text">
-
+                <h3>Принципы работы</h3>
+                <div class="slide-text">
+                    Объявление состоит из текста и значка видео. Внешний вид таких объявлений зависит от
+                    места, где они появляются.
+                    При нажатии на объявление видео будет показано на странице просмотра YouTube.
+                </div>
                 <h3>Где показываются объявления</h3>
                 <div class="slide-text">
-                    Объявления TrueView In-Stream отображаются в других видеороликах на
-                    страницах просмотра YouTube,
-                    а также на партнерских видеосайтах и в приложениях, входящих в КМС.
+                    Объявления могут размещаться:<br>
+                    1. В результатах поиска YouTube.<br>
+                    2. В списке похожих видео YouTube.<br>
+                    3. На главной странице мобильной версии YouTube.
+                </div>
+                <h3>Оплата</h3>
+                <div class="slide-text">
+                    Средства списываются только в том случае,
+                    если пользователь решает просмотреть объявление, нажав на значок видео.
                 </div>
             </div>
         </div>
         <div class="slide-item">
             <img src="assets/png/слайд1.png">
             <div class="image-text">
+                <h3>Принципы работы</h3>
+                <div class="slide-text">
+                    Объявление-заставка показывается пользователям в короткий промежуток времени,
+                    до 6 секунд в начале, середине или конце другого видео.
+                    Пользователи не могут пропустить данный формат видеоролика.
+                </div>
+                <h3>Где показываются объявления</h3>
+                <div class="slide-text">
+                    Объявления-заставки размещаются как в видео на YouTube так
+                    и на партнерских сайтах и в приложениях КМС.
+                </div>
                 <h3>​Оплата</h3>
                 <div class="slide-text">
-                    Оплачивать просмотр придётся только в случае если:<br>
-                    1. Пользователь досмотрел не менее 30 сек.
-                    объявления (либо весь видеоролик длительностью менее 30 секунд).<br>
-                    2. Пользователь перешёл по сопутствующему баннеру или оверлей содержащим C2A.
+                    Плата взимается не за просмотры, за показы.
+                    В качестве расчётного значения используется цена за тысячу показов.
                 </div>
             </div>
         </div>
@@ -328,12 +362,7 @@
                     <img src="assets/рупор.svg">
                 </div>
                 <p>
-                    Объясните, что нужно сделать
-                    после просмотра рекламы.
-                    Выберите оптимальный момент
-                    для призыва к действию
-                    Используйте голос,
-                    графику и крупный текст.
+                    Используйте голос, графику или крупный текст для чёткого призыва к действию.
                 </p>
             </td>
             <td>
@@ -344,9 +373,7 @@
                     <img src="assets/crop.png">
                 </div>
                 <p>
-                    Удерживайте внимание пользователей используя частую смену кадров и высокий ритм.
-                    Старайтесь сократить 30 секунд до 15, а 15 до 12 или хотя бы показать предложение в начале
-                    ролика.
+                    Используйте частую смену кадров и высокий ритм, но не забывайте про длину ролика.
                 </p>
             </td>
             <td>
@@ -357,8 +384,7 @@
                     <img src="assets/clocks.png">
                 </div>
                 <p>
-                    Зрители могут пропустить рекламу. Вовлекайте с самого начала ролика - развлекая,
-                    показав проблему или сделав предложение. Не заставляйте ждать. Используйте звук.
+                    Вовлекайте с самого начала ролика и не заставляйте ждать. Используйте звук.
                 </p>
             </td>
         </tr>
@@ -371,8 +397,8 @@
                     <img src="assets/phone.png">
                 </div>
                 <p>
-                    Большинство просмотров YouTube происходит с мобильного. Крупные планы,
-                    большой текст и графика, яркие кадры с частой сменой показывают результаты на мобильных.
+                    Помните, что крупные планы, большой текст и графика,
+                    яркие кадры с частой сменой показывают отличные результаты на мобильных.
                 </p>
             </td>
             <td>
@@ -383,9 +409,7 @@
                     <img src="assets/fingers.png">
                 </div>
                 <p>
-                    Не скупитесь на хорошую видеотехнику. Сегодня на рынке
-                    доступно огромное количество сравнительно недорогих
-                    відео-устройств, позволяющих снимать в отличном качестве.
+                    Не скупитесь на хорошую видеотехнику. Помните, что качество - это главное.
                 </p>
             </td>
             <td>
@@ -396,8 +420,8 @@
                     <img src="assets/duck.png">
                 </div>
                 <p>
-                    Вовлекающая заставка к вашему видеоролику - это
-                    отличный инструмент для привлечения аудитории и роста органическиих просмотров на вашем канале.
+                    Вовлекающая заставка к видеоролику - это отличный
+                    инструмент для привлечения аудитории и роста подписчиков.
                 </p>
             </td>
         </tr>
@@ -496,11 +520,13 @@
 
                 ГЕО: Республика Беларусь<br><br>
 
-                Группа роликов: 1. 1AKB.by (семья)<br>
+                Группа роликов:<br>
+                1. 1AKB.by (семья)<br>
                 2. Сеть аккумуляторных<br>
-                магазинов 1AKB.by<br>
+                магазинов 1AKB.by<br><br>
 
-                Длительность роликов: 1. 33 секунды<br>
+                Длительность роликов:<br>
+                1. 33 секунды<br>
                 2. 44 секунды<br><br>
 
                 Достигнутые показатели:<br><br>
@@ -540,9 +566,6 @@
     <div class="slide"><img src="assets/logos/logo6.png"></div>
 </div>
 <div class="footer">
-    <div class="background-logo">
-        <img class="background-logo" src="assets/png/вап.png">
-    </div>
     <div class="row">
         <h3 class="footer-header">
             Заполните форму и мы с вами свяжемся
@@ -551,7 +574,7 @@
     </div>
     <div class="row">
         <div class="left-part-footer">
-            <input type="text">
+            <input type="text" style="">
             <input type="text">
             <input type="text">
             <input type="text">
@@ -577,7 +600,9 @@
         </div>
         <div class="empty"></div>
     </div>
-
+    <div class="background-logo">
+        <img class="background-logo" src="assets/png/вап.png">
+    </div>
 </div>
 </div>
 
@@ -622,6 +647,16 @@
             //  prevArrow: '<img class="slick-arrow-right" src="assets/png/arrow.svg">',
             // nextArrow: '<img class="slick-arrow-left" src="assets/png/arrow.svg">'
         });
+    });
+    $('.arrow-down').click(function () {
+        var win = $(window).height();
+        $('body,html').animate({
+            scrollTop: win
+        }, 800);
+        return false;
+    });
+    $(window).scroll(function () {
+
     });
 </script>
 
