--- a/index.html
+++ b/index.html
@@ -566,24 +566,46 @@
     <div class="slide"><img src="assets/logos/logo6.png"></div>
 </div>
 <div class="footer">
-    <div class="row">
-        <h3 class="footer-header">
-            Заполните форму и мы с вами свяжемся
-        </h3>
-        <div class="empty"></div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="empty"></div>-->
+    <!--</div>-->
     <div class="row">
         <div class="left-part-footer">
-            <input type="text" style="">
-            <input type="text">
-            <input type="text">
-            <input type="text">
-            <input type="text">
+            <!--<input type="text" style="">-->
+            <!--<input type="text">-->
+            <!--<input type="text">-->
+            <!--<input type="text">-->
+            <!--<input type="text">-->
+            <h3 class="footer-header">
+                Заполните форму и мы с вами свяжемся
+            </h3>
+            <img src="assets/footer-logo.png" style="padding: 25px 0; height: 200px">
+            <!--<input type="text" class="footer-input" placeholder="Введите свой e-mail адрес">-->
+            <!--<div class="send-label">отправить</div>-->
+
+            <div id="floatContainer" class="float-container">
+                    <label class="send-label" for="floatField">отправить</label>
+                    <input id="floatField" type="text" class="footer-input" placeholder="Введите свой e-mail адрес">
+            </div>
+        </div>
+        <div class="social-icons-container">
+            <div class="icon-container">
+                <img src="assets/logos/facebook.svg" class="social-icon">
+            </div>
+            <div class="icon-container">
+                <img src="assets/logos/instagram.svg" class="social-icon">
+            </div>
+            <div class="icon-container">
+                <img src="assets/logos/vk.svg" class="social-icon">
+            </div>
+            <div class="icon-container">
+                <img src="assets/logos/linked.svg" class="social-icon">
+            </div>
         </div>
         <div class="right-part-footer">
-            <div style="overflow:hidden;width: 700px;position: relative;">
-                <iframe width="700" height="350"
-                        src="https://maps.google.com/maps?width=700&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
+            <div style="overflow:hidden;width: 500px;position: relative;">
+                <iframe width="500" height="350"
+                        src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                 <style>#gmap_canvas img {
                     max-width: none !important;
@@ -592,17 +614,17 @@
             </div>
             <br/></div>
     </div>
-    <div class="row">
-        <div class="footer-button-container">
-            <div class="footer-button">
-                отправить
-            </div>
-        </div>
-        <div class="empty"></div>
-    </div>
-    <div class="background-logo">
-        <img class="background-logo" src="assets/png/вап.png">
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="footer-button-container">-->
+            <!--<div class="footer-button">-->
+                <!--отправить-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="empty"></div>-->
+    <!--</div>-->
+    <!--<div class="background-logo">-->
+        <!--<img class="background-logo" src="assets/png/вап.png">-->
+    <!--</div>-->
 </div>
 </div>
 
