--- a/index.html
+++ b/index.html
@@ -603,6 +603,9 @@
             </div>
         </div>
         <div class="right-part-footer">
+            <h3 class="footer-header">
+               наше местоположение
+            </h3>
             <div style="overflow:hidden;width: 500px;position: relative;">
                 <iframe width="500" height="350"
                         src="https://maps.google.com/maps?width=500&amp;height=350&amp;hl=en&amp;q=%D0%BC%D0%B8%D0%BD%D1%81%D0%BA%20%D1%84%D0%B0%D0%B1%D1%80%D0%B8%D1%86%D0%B8%D1%83%D1%81%D0%B0%209%D0%B0+(%D0%9E%D0%9E%D0%9E%20%22%D0%90%D0%BF%D0%9A%D0%BB%D0%B8%D0%B5%D0%BD%D1%82)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
