--- a/index.html
+++ b/index.html
@@ -425,48 +425,13 @@
                 </p>
             </td>
         </tr>
-
-        <!--<img class="yellow-container-image-2" src="assets/png/ножніцы.png">-->
-        <!--<img class="yellow-container-image-3" src="assets/png/секундомер.png">-->
-        <!--<img class="yellow-container-image-4" src="assets/png/телефон.png">-->
-        <!--<div class="image-discript image-discript-1">-->
-        <!--<h3>Теоретические основы </h3>-->
-        <!--<span>В данной работе будет изучена-->
-        <!--трёхшаговая разностная схема расщеплений с весами на-->
-        <!--примере решения трёхмерного уравнения-->
-        <!--теплопроводности</span>-->
-        <!--</div>-->
-        <!--<div class="image-discript image-discript-2">-->
-        <!--<h3>Теоретические основы </h3>-->
-        <!--<span>В работе также будут проведены различные вычислительные-->
-        <!--эксперименты,-->
-        <!--проверяющие эффективность разработанного алгоритма и программы</span>-->
-        <!--</div>-->
-        <!--<div class="image-discript image-discript-3">-->
-        <!--<h3>Теоретические основы </h3>-->
-        <!--<span>-->
-        <!--Эксперименты будут проведены на персональном-->
-        <!--компьютере с небольшими мощностями, на кластере-->
-        <!--с использованием облачных вычислений, а также на-->
-        <!--компьютере с мощным процессором.-->
-        <!--</span>-->
-        <!--</div>-->
-        <!--<div class="image-discript image-discript-4">-->
-        <!--<h3>Теоретические основы </h3>-->
-        <!--<span>-->
-        <!--Параллельные вычисления – такой способ организации-->
-        <!--компьютерных вычислений, при котором программы-->
-        <!--разрабатываются как набор взаимодействующих-->
-        <!--вычислительных процессов, работающих параллельно-->
-        <!--</span>-->
-        <!--</div>-->
     </table>
 </div>
 <h1>наши кейсы</h1>
 <div class="keyses-container keyses-class slider">
     <div class="keyses-description-block">
         <div style="display: flex;flex-direction: row;align-items: center">
-            <img id="monitor" src="assets/monitors/1.png">
+            <img src="assets/monitors/1.png">
             <div class="keyses-description">
                 ГЕО: Республика Беларусь<br><br>
 
@@ -485,12 +450,12 @@
             </div>
         </div>
         <div class="monitor-logos">
-            <img id="monitor-logo" src="assets/logos/logo1-monitor.png">
+            <img src="assets/logos/logo1-monitor.png">
         </div>
     </div>
     <div class="keyses-description-block">
         <div style="display: flex;flex-direction: row;align-items: center">
-            <img id="monitor" src="assets/monitors/2.png">
+            <img src="assets/monitors/2.png">
             <div class="keyses-description">
 
                 ГЕО: Западная Европа и Россия<br><br>
@@ -509,12 +474,12 @@
             </div>
         </div>
         <div class="monitor-logos">
-            <img id="monitor-logo" src="assets/logos/logo2-monitor.png">
+            <img src="assets/logos/logo2-monitor.png">
         </div>
     </div>
     <div class="keyses-description-block">
         <div style="display: flex;flex-direction: row;align-items: center">
-            <img id="monitor" src="assets/monitors/3.png">
+            <img src="assets/monitors/3.png">
             <div class="keyses-description">
                 Кольцевой формат рекламы - NEW!<br><br>
 
@@ -539,7 +504,7 @@
             </div>
         </div>
         <div class="monitor-logos">
-            <img id="monitor-logo" src="assets/logos/logo3-monitor.png">
+            <img  src="assets/logos/logo3-monitor.png">
         </div>
     </div>
 </div>
@@ -566,23 +531,12 @@
     <div class="slide"><img src="assets/logos/logo6.png"></div>
 </div>
 <div class="footer">
-    <!--<div class="row">-->
-        <!--<div class="empty"></div>-->
-    <!--</div>-->
     <div class="row">
         <div class="left-part-footer">
-            <!--<input type="text" style="">-->
-            <!--<input type="text">-->
-            <!--<input type="text">-->
-            <!--<input type="text">-->
-            <!--<input type="text">-->
             <h3 class="footer-header">
                 Заполните форму и мы с вами свяжемся
             </h3>
             <img src="assets/footer-logo.png" style="padding: 25px 0; height: 200px">
-            <!--<input type="text" class="footer-input" placeholder="Введите свой e-mail адрес">-->
-            <!--<div class="send-label">отправить</div>-->
-
             <div id="floatContainer" class="float-container">
                     <label class="send-label" for="floatField">отправить</label>
                     <input id="floatField" type="text" class="footer-input" placeholder="Введите свой e-mail адрес">
@@ -617,18 +571,6 @@
             </div>
             <br/></div>
     </div>
-    <!--<div class="row">-->
-        <!--<div class="footer-button-container">-->
-            <!--<div class="footer-button">-->
-                <!--отправить-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="empty"></div>-->
-    <!--</div>-->
-    <!--<div class="background-logo">-->
-        <!--<img class="background-logo" src="assets/png/вап.png">-->
-    <!--</div>-->
-</div>
 </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
