--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
         <div class="prices-row">
             <div class="price-item">
                 <div class="price-count"><span class="symbol-dollar">$</span>100</div>
-                <div class="price-description text">120 000 просмотров</div>
-                <div class="price-description text">80 000 вовлечений</div>
-                <div class="price-description text">65 000 показов</div>
+                <div class="price-description text">10 000 просмотров</div>
+                <div class="price-description text">8 000 вовлечений</div>
+                <div class="price-description text">15 000 показов</div>
             </div>
             <div class="price-item">
-                <div class="price-count"><span class="symbol-dollar">$</span>100</div>
-                <div class="price-description text">120 000 просмотров</div>
-                <div class="price-description text">80 000 вовлечений</div>
-                <div class="price-description text">65 000 показов</div>
+                <div class="price-count"><span class="symbol-dollar">$</span>350</div>
+                <div class="price-description text">50 000 просмотров</div>
+                <div class="price-description text">35 000 вовлечений</div>
+                <div class="price-description text">29 000 показов</div>
             </div>
             <div class="price-item">
-                <div class="price-count"><span class="symbol-dollar">$</span>100</div>
+                <div class="price-count"><span class="symbol-dollar">$</span>800</div>
                 <div class="price-description text">120 000 просмотров</div>
                 <div class="price-description text">80 000 вовлечений</div>
                 <div class="price-description text">65 000 показов</div>
@@ -550,20 +550,20 @@
                 <input id="floatField" type="text" class="footer-input" placeholder="Введите свой e-mail адрес">
             </div>
         </div>
-        <div class="social-icons-container">
-            <div class="icon-container">
-                <img src="assets/logos/facebook.svg" class="social-icon">
-            </div>
-            <div class="icon-container">
-                <img src="assets/logos/instagram.svg" class="social-icon">
-            </div>
-            <div class="icon-container">
-                <img src="assets/logos/vk.svg" class="social-icon">
-            </div>
-            <div class="icon-container">
-                <img src="assets/logos/linked.svg" class="social-icon">
-            </div>
-        </div>
+<!--        <div class="social-icons-container">-->
+<!--            <div class="icon-container">-->
+<!--                <img src="assets/logos/facebook.svg" class="social-icon">-->
+<!--            </div>-->
+<!--            <div class="icon-container">-->
+<!--                <img src="assets/logos/instagram.svg" class="social-icon">-->
+<!--            </div>-->
+<!--            <div class="icon-container">-->
+<!--                <img src="assets/logos/vk.svg" class="social-icon">-->
+<!--            </div>-->
+<!--            <div class="icon-container">-->
+<!--                <img src="assets/logos/linked.svg" class="social-icon">-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="right-part-footer">
             <h3 class="footer-header">
                 наше местоположение
